--- a/appointmentmanagementsystem.client/src/app/app.component.html
+++ b/appointmentmanagementsystem.client/src/app/app.component.html
@@ -1,4 +1,25 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+﻿<!--app.component.html-->
+@if(logged){
+    <mat-toolbar>
+    {{username}}
+    <button (click)="logout()">Logout</button>
+</mat-toolbar>
+}
+<router-outlet></router-outlet>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<h1 id="tableLabel">Weather forecast</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
@@ -22,3 +43,4 @@
         </tr>
     </tbody>
 </table>
+-->
