"Added register component with form validation and routing"

--- a/appointmentmanagementsystem.client/src/app/login/login.component.html
+++ b/appointmentmanagementsystem.client/src/app/login/login.component.html
@@ -7,7 +7,8 @@
         <button class="btn-show-switch" type="button" (click)="showPassword()">{{show ? 'Show' : 'Hide'}}</button>
         <div class="btn-container">
             <button class="btn login-btn" type="submit">Login</button>
-            <button class="btn register-btn" (click)="register()">Register</button>
+            <button class="btn register-btn" type="button" (click)="register()">Register</button>
         </div>
     </form>
+    
 </div>
