--- a/appointmentmanagementsystem.client/src/app/register/register.component.html
+++ b/appointmentmanagementsystem.client/src/app/register/register.component.html
@@ -1,1 +1,50 @@
-<p>register works!</p>
+<div class="register-container">
+    <h1>Register</h1>
+    <form [formGroup]="registerform" (ngSubmit)="register()">
+      <div>
+        <input placeholder="Username" type="text" formControlName="username">
+        <div *ngIf="registerform.get('username')?.invalid && registerform.get('username')?.touched">
+          <small *ngIf="registerform.get('username')?.errors?.['required']">Username is required.</small>
+          <small *ngIf="registerform.get('username')?.errors?.['minlength']">Username must be at least 4 characters long.</small>
+        </div>
+      </div>
+      <br>
+      <div>
+        <input placeholder="Password" type="password" formControlName="password">
+        <div *ngIf="registerform.get('password')?.invalid && registerform.get('password')?.touched">
+          <small *ngIf="registerform.get('password')?.errors?.['required']">Password is required.</small>
+          <small *ngIf="registerform.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</small>
+        </div>
+      </div>
+      <div>
+        <input placeholder="Confirm Password" type="password" formControlName="confirmPassword">
+        <div *ngIf="registerform.get('confirmPassword')?.invalid && registerform.get('confirmPassword')?.touched">
+          <small *ngIf="registerform.get('confirmPassword')?.errors?.['required']">Confirm Password is required.</small>
+          <small *ngIf="registerform.get('confirmPassword')?.errors?.['passwordMismatch']">Passwords must match.</small>
+        </div>
+      </div>
+      <br>
+      <div>
+        <input placeholder="Name" type="text" formControlName="name">
+        <div *ngIf="registerform.get('name')?.invalid && registerform.get('name')?.touched">
+          <small *ngIf="registerform.get('name')?.errors?.['required']">Name is required.</small>
+        </div>
+      </div>
+      <div>
+        <input placeholder="Surname" type="text" formControlName="surname">
+        <div *ngIf="registerform.get('surname')?.invalid && registerform.get('surname')?.touched">
+          <small *ngIf="registerform.get('surname')?.errors?.['required']">Surname is required.</small>
+        </div>
+      </div>
+      <br>
+      <div>
+        <input placeholder="email@example.com" type="email" formControlName="email">
+        <div *ngIf="registerform.get('email')?.invalid && registerform.get('email')?.touched">
+          <small *ngIf="registerform.get('email')?.errors?.['required']">Email is required.</small>
+          <small *ngIf="registerform.get('email')?.errors?.['email']">Email must be valid.</small>
+        </div>
+      </div>
+      <br>
+      <button type="submit" [disabled]="registerform.invalid">Register</button>
+    </form>
+  </div>
