"Added toolbar with logout functionality to admin-main and user-main components, removed toolbar from app component, and updated login component to set local storage on login"

--- a/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar class="toolbar">
+    {{username}}
+    <button (click)="logout()">Logout</button>
+</mat-toolbar>
 <div>
     <p>Next appointment</p>
     <br>
