--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -1,1 +1,5 @@
+<mat-toolbar class="toolbar">
+    {{username}}
+    <button (click)="logout()">Logout</button>
+</mat-toolbar>
 <p>user-main works!</p>
