--- a/appointmentmanagementsystem.client/src/app/login/login.component.html
+++ b/appointmentmanagementsystem.client/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <!--login.component.html-->
 <div class="form-container">
     <h1>Login</h1>
-    <form [formGroup]="loginform" (ngSubmit)="submitForm()">
+    <form [formGroup]="loginform" (ngSubmit)="login()">
         <input placeholder="Username" type="text" formControlName="username">
         <input placeholder="Password" [type]="show ? 'text' : 'password'" formControlName="password">
         <button class="btn-show-switch" type="button" (click)="showPassword()">{{show ? 'Show' : 'Hide'}}</button>
