--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -2,4 +2,13 @@
     {{username}}
     <button (click)="logout()">Logout</button>
 </mat-toolbar>
-<p>user-main works!</p>
+
+
+<div class="container">
+    <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="event_available"></mat-icon>
+    <p>Make an appointment</p>
+</div>
+
+<div class="container">
+    <label>Your Appointments:</label>
+</div>
