--- a/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/admin-main/admin-main.component.html
@@ -1,7 +1,4 @@
-<mat-toolbar class="toolbar">
-    {{username}}
-    <button (click)="logout()">Logout</button>
-</mat-toolbar>
+<app-toolbar></app-toolbar>
 <div>
     <p>Next appointment</p>
     <br>
