--- a/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
@@ -1,6 +1,9 @@
+<app-toolbar></app-toolbar>
+
+
 <div class="calendar"></div>
 <div class="hours">
     @for(hour of availablehours;track hour){
-        <div class="hour" data-hour="@hour">@hour</div>
+        <div class="hour" data-hour="@hour">{{hour}}</div>
     }
 </div>
