--- a/appointmentmanagementsystem.client/src/app/register/register.component.html
+++ b/appointmentmanagementsystem.client/src/app/register/register.component.html
@@ -46,5 +46,6 @@
       </div>
       <br>
       <button type="submit" [disabled]="registerform.invalid">Register</button>
+      <button type="button" (click)="cancel()">Cancel</button>
     </form>
   </div>
