--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -6,4 +6,11 @@
 
 <div class="container">
     <label>Your Appointments:</label>
+    @for(appointment of appointments; track appointment){
+        <div>
+            <p>Date: {{appointment.date}}</p>
+            <p>{{appointment.appointment_time}}</p>
+        </div>
+        
+    }
 </div>
