Added Date Split

--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -7,7 +7,7 @@
 <div class="container">
     <label>Your Appointments:</label>
     @for(appointment of appointments; track appointment){
-        <div>
+        <div class="appointment">
             <p>Date: {{appointment.date}}</p>
             <p>{{appointment.appointment_time}}</p>
         </div>
