"Updated database schema, routing, and UI components for appointment management system"

--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -10,6 +10,7 @@
         <div class="appointment">
             <p>Date: {{appointment.date}}</p>
             <p>{{appointment.appointment_time}}</p>
+            <button type="button" (click)="deleteAppointment($event)"> x </button>
         </div>
         
     }
