"Added MatIconModule to toolbar component, added person icon to toolbar template, and updated user-main component imports"

--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar class="toolbar">
+    <mat-icon aria-hidden="false" aria-label="person" fontIcon="person"></mat-icon>
     {{username}}
     <button (click)="logout()">Logout</button>
 </mat-toolbar>
