"Refactored AppointmentsController, Appointments model, and client-side appointments service and components to simplify date handling and appointment retrieval."

--- a/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-make-appointment/user-make-appointment.component.html
@@ -1,7 +1,7 @@
 <app-toolbar></app-toolbar>
 
-
-<div class="calendar"></div>
+<p>HOLa</p>
+<mat-calendar #picker class="calendar" (selectedChange)="onDateSelected($event)"></mat-calendar>
 <div class="hours">
     @for(hour of availablehours;track hour){
         <div class="hour" data-hour="@hour">{{hour}}</div>
