"Updated AppointmentManagementSystem: added new endpoints and models, modified controllers and services, and updated client-side components and templates."

--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
@@ -1,5 +1,8 @@
 .container{
     background-color: #13131A ;
+    display: flex;
+    flex-direction: column;
+    color:white;
 }
 mat-icon{
     color:white;
@@ -7,4 +10,7 @@ mat-icon{
 
 .appointment{
     background-color: #373749;
+    margin: 5px;
+    border-radius:15px;
+    display:flex;
 }
