--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar class="toolbar">
-    <mat-icon aria-hidden="false" aria-label="person" fontIcon="person"></mat-icon>
+    <mat-icon class="menu" fontIcon="menu"></mat-icon>
     {{username}}
     <button (click)="logout()">Logout</button>
+    
+    <mat-icon class="switch-theme" fontIcon="dark_mode"></mat-icon>
 </mat-toolbar>
