--- a/appointmentmanagementsystem.client/src/app/app.component.css
+++ b/appointmentmanagementsystem.client/src/app/app.component.css
@@ -1,6 +1,5 @@
 ﻿:host {
-    max-width: 1280px;
-    padding: 2rem;
+/*max-width: 1280px;*/
     text-align: center;
 }
 
@@ -15,11 +14,4 @@ tr:nth-child(odd) {
 th, td {
     padding-left: 1rem;
     padding-right: 1rem;
-}
-
-table {
-    margin: 0 auto;
-}
-.toolbar{
- 
 }
