--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
@@ -1,56 +1,178 @@
-.container{
-    background-color: #13131A ;
+html,
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+p{
+    margin: 14px 0px 14px 0px;
+}
+.container-usermain {
     display: flex;
     flex-direction: column;
-    color:white;
-    width: 420px;
-    height: 460px;
-    position: absolute;
+    height: 100vh;
 }
-.make-appointment-ico{
-    color:white;
-    font-size:130px;
-    padding:90px;
+.appointments .container label{
+    font-weight: 100;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
 }
-.appointments{
-    position: absolute;
-    top:200px;
-    left:700px;
+.bg-main {
+    flex: 1;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    gap: 5rem;
+
+    justify-content: center;
+    align-items: center;
+    background: var(--bg-container-dark);
+    /* Puedes cambiar esto al color que prefieras */
+}
+
+.makeappointment {
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    /*margin: 20px;*/
+    text-align: center;
+    background: var(--bg-dark-main);
+}
+
+img {
+    /*
+    max-width: 15em;
+    min-width:6em;
+
+    max-height: 15em;
+    min-height: 6em;
+
+    width: 100%;
+    height: 100%;
+   
+    font-size: 135px; 
+    width: 135px; 
+    height: 135px;  */
+    width: 15rem;
+    margin: 5px
+}
+
+.make-appointment-text {
+    font-size: 27px;
+    font-weight: 400;
+}
+
+.appointments {
+    flex: 1;
+    overflow-y: auto;
+    /*padding: 20px;*/
+}
+
+.container {
+    max-width: 25rem;
+    min-width: 15rem;
+    min-height: 60vh;
+    width: 100%;
+    /*margin: 0 auto;*/
+    background: var(--bg-dark-main);
+    color: white;
+    font-weight: bold;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .appointment {
-    background-color: #373749;
-    margin: 5px;
     border-radius: 15px;
+    overflow: hidden;
+    margin: 5px 0px 0px 5px;
+    /*margin: 5px 0px 0px 25px;*/
+    max-width: 340px;
+    /*min-width: 230px;*/
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 60px;
+    /*align-items: center;*/
+    align-items: stretch;
+    justify-content: space-between;
+    /*padding: 25px;
+    /*border-bottom: 1px solid #e0e0e0;*/
+    background: var(--bg-appointment-dark);
+    /*border-bottom: 1px solid #e0e0e0;*/
+}
+
+.index-text {
+    font-weight: bold;
+    font-size: 26px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    /**/
+    border-top-left-radius: 10px;
+    /* Radio de borde superior derecho */
+    border-bottom-left-radius: 10px;
+    /* Radio de borde inferior derecho */
+    /**/
     flex-wrap: wrap;
-    align-items: center;
-}
-.index-text{
-    background-color: #20202B;
-    width: 7.5%;
-    height: 100%;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    align-content: center;
+    padding: 2px;
     text-align: center;
+    background-color: #20202B;
 }
 
-.makeappointment{
-    background-color: #13131A ;
-    color:white;
-    width: 340px;
-    height: 400px;
-    position: absolute;
-    top:200px;
-    left:300px;
-    display:block;
+.index-text p {
+    font-weight: 300;
+    padding: 11px;
+    margin: 0;
 }
 
-.text{
-    margin-right:50%;
-    margin-left: 10px;
-    margin-top:5px;
+.text {
+    flex: 1;
+    text-align: left;
+    margin: 14px 0px 14px 12px;
+    font-weight: 400;
+}
+.text p{
+    margin: 0;
+}
+
+.close {
+    display: flex;
+    align-content: center;
+    /**/
+    width: 40px;
+    border-top-right-radius: 10px;
+    /* Radio de borde superior derecho */
+    border-bottom-right-radius: 10px;
+    /* Radio de borde inferior derecho */
+    /**/
+    cursor: pointer;
+    flex-wrap: wrap;
+}
+.scroll-container{
+    margin: 15px;
+    overflow: scroll;
+    max-height: 509px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+.scroll-container::-webkit-scrollbar{
+    background-color: #09090D;
+    border-radius: 10px; 
+}
+.scroll-container::-webkit-scrollbar-thumb{
+    background: var(--bg-appointment-dark);
+    border-radius: 10px; 
+    transition: 0.3s;
+}
+.scroll-container::-webkit-scrollbar-thumb:hover{
+    background:#51516b;
+    transform: scale(1.2);
 }
