--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,36 @@
 <mat-toolbar class="toolbar">
-    <mat-icon class="menu" fontIcon="menu"></mat-icon>
+    <mat-icon class="menu" fontIcon="menu" (click)="menuOpen()"></mat-icon>
     {{username}}
     <button (click)="logout()">Logout</button>
     
     <mat-icon class="switch-theme" fontIcon="dark_mode"></mat-icon>
 </mat-toolbar>
+
+@if(menu == "user-menu"){
+    <div class="sidenav-container"> 
+        <div (click)="navClick('account')" class="sidenav-item">
+            <mat-icon fontIcon="person"></mat-icon>
+            <p>Account</p>
+        </div>
+        
+    </div>
+}
+@if(menu == "admin-menu"){
+    <div class="sidenav-container">
+    <div (click)="navClick('account')" class="sidenav-item">
+        <mat-icon fontIcon="person"></mat-icon>
+        <p>Account</p>
+    </div>
+    <div (click)="navClick('users')" class="sidenav-item">
+        <mat-icon fontIcon="list"></mat-icon>
+        <p>Users</p>
+    </div>
+    <div (click)="navClick('appointments')" class="sidenav-item">
+        <mat-icon fontIcon="settings"></mat-icon>
+        <p>Appointments</p>
+    </div>
+    </div>
+}
+@if(tab != ''){
+    <ng-container class="modal" *ngComponentOutlet="selectedComponent()"></ng-container>
+}
