"Updated toolbar component: changed modal styles, added close button and functionality, and modified component HTML and TS files."

--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.css
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.css
@@ -56,7 +56,11 @@ button:hover{
 }
 
 .modal{
-    background-color:#ddddff;
-    width: 100px;
+    background-color:#13131A;
+    width: 700px;
     height: 100px;
+}
+
+.close-button{
+    cursor:pointer;
 }
