--- a/appointmentmanagementsystem.client/src/app/account/account.component.html
+++ b/appointmentmanagementsystem.client/src/app/account/account.component.html
@@ -1,1 +1,6 @@
-<p>account works!</p>
+    <div class="popup">
+        <div class="popup-content">
+            <div class="popup-title">
+                <p>Account Works</p>
+                </div>
+    </div>
