--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.html
@@ -22,7 +22,7 @@
                         <p>{{appointment.appointment_time}}</p>
                     </div>
                     <div class="close" (click)="deleteAppointment(appointment)">
-                        <mat-icon fontIcon="close"></mat-icon>
+                        <mat-icon class="close-icon" fontIcon="close"></mat-icon>
                     </div>
 
                 </div>
