--- a/appointmentmanagementsystem.client/src/styles.css
+++ b/appointmentmanagementsystem.client/src/styles.css
@@ -3,6 +3,7 @@
     --bg-gradient-main:conic-gradient(from 135deg at 50% 50%, #000000 -59.38deg, #003A64 115.22deg, #5B4261 187.22deg, #000000 300.62deg, #003A64 475.22deg);
     --bg-dark-main:#13131A;
     --bg-appointment-dark:#373749;
+    --bg-appointment-dark-hover:#5f5f7e;
     --bg-container-dark: #272735;
     --bg-container-dark1:#191A2C;
     --bg-container-dark2:#20232F;
