--- a/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
+++ b/appointmentmanagementsystem.client/src/app/toolbar/toolbar.component.html
@@ -2,24 +2,37 @@
     <mat-icon class="menu" fontIcon="menu" (click)="menuOpen()"></mat-icon>
     {{username}}
     <button (click)="logout()">Logout</button>
-    
+
     <mat-icon class="switch-theme" fontIcon="dark_mode"></mat-icon>
 </mat-toolbar>
-
-@if(menu == "user-menu"){
-    <div class="sidenav-container"> 
+<div [ngClass]="{'closed': menu === '', 'opened': menu !== ''}" class="sidenav-container">
+    @if(menu == "user-menu"){
         <div (click)="navClick('account')" class="sidenav-item">
-            <mat-icon fontIcon="person"></mat-icon>
-            <p>Account</p>
+            <img src="assets/icons/person.svg" alt="account">
+            <p class="option-text"> Account</p>
+            <!--<mat-icon fontIcon="person"></mat-icon>-->
         </div>
-        
-    </div>
-}
-@if(menu == "admin-menu"){
-    <div class="sidenav-container">
+    }
+    @if(menu == "admin-menu"){
+        <div (click)="navClick('account')" class="sidenav-item">
+            <p> <img src="assets/icons/person.svg" alt=""> Account</p>
+        </div>
+        <div (click)="navClick('users')" class="sidenav-item">
+            <mat-icon fontIcon="list"></mat-icon>
+            <p>Users</p>
+        </div>
+        <div (click)="navClick('appointments')" class="sidenav-item">
+            <mat-icon fontIcon="settings"></mat-icon>
+            <p>Appointments</p>
+        </div>
+    }
+</div>
+<!--<button (click)="menuOpen()">Toggle Menu</button>-->
+
+<!--
+<div class="sidenav-container">
     <div (click)="navClick('account')" class="sidenav-item">
-        <mat-icon fontIcon="person"></mat-icon>
-        <p>Account</p>
+        <p> <img src="assets/icons/person.svg" alt=""> Account</p>
     </div>
     <div (click)="navClick('users')" class="sidenav-item">
         <mat-icon fontIcon="list"></mat-icon>
@@ -29,11 +42,17 @@
         <mat-icon fontIcon="settings"></mat-icon>
         <p>Appointments</p>
     </div>
-    </div>
+</div>-->
+
+@if(menu == "user-menu"){
+
+}
+@if(menu == "admin-menu"){
+
 }
 @if(tab != ''){
-    <div class="modal">
+<div class="modal">
     <mat-icon class="close-button" fontIcon="close" (click)="closeModal()"></mat-icon>
     <ng-container *ngComponentOutlet="selectedComponent()"></ng-container>
-    </div>
+</div>
 }
