--- a/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
+++ b/appointmentmanagementsystem.client/src/app/user-main/user-main.component.css
@@ -1,10 +1,3 @@
-html,
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
 p{
     margin: 14px 0px 14px 0px;
 }
@@ -49,23 +42,22 @@ p{
 }
 
 img {
-    /*
-    max-width: 15em;
-    min-width:6em;
-
-    max-height: 15em;
-    min-height: 6em;
-
-    width: 100%;
-    height: 100%;
-   
-    font-size: 135px; 
-    width: 135px; 
-    height: 135px;  */
     width: 15rem;
     margin: 5px
 }
-
+/**/
+.close-icon{
+    cursor: pointer;
+    transition: 0.2s;
+}
+.close-icon:hover{
+    transform: scale(1.1);
+    color:rgb(191, 61, 61);
+}
+.close-icon:active{
+    transform: scale(0.7);
+    color:rgb(205, 47, 47);
+}
 .make-appointment-text {
     font-size: 27px;
     font-weight: 400;
