--- a/appointmentmanagementsystem.client/src/app/appointments/appointments.component.html
+++ b/appointmentmanagementsystem.client/src/app/appointments/appointments.component.html
@@ -1,1 +1,8 @@
-<p>appointments works!</p>
+@for(appointment of allAppointments; track $index){
+    <div>
+        <p>{{appointment.id_appointment}}</p>
+        <p>{{appointment.date}}</p>
+        <p>{{appointment.appointment_time}}</p>
+        <p>{{appointment.username}}</p>
+    </div>
+}
